# dynamic-juno

./: .env.example  .gitignore  .projects-index.json  CLAUDE.md  pyproject.toml  server.py
.claude/: launch.json  start-server.sh
agents/: __init__.py  coordinator.py  debater_agent.py  editor_agent.py  idea_agent.py  outline_agent.py  research_agent.py  voice_agent.py  world_builder_agent.py  writer_agent.py
home-dashboard/: README.md
home-dashboard/project/: Dynamic Juno Workspace.html  styles.css  ui-app.jsx  ui-artifacts.jsx
tools/: __init__.py  doc_parser.py  file_io.py  semantic_scholar.py  voice_analysis.py  world_builder_tools.py  zotero_tools.py
web/: agents.js  app.js  artifacts.js  index.html  styles.css  ui-app.jsx  ui-artifacts.jsx  ui-chat.jsx  ui-status.jsx  utils.js
writing_team.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
